--- a/css/index.css
+++ b/css/index.css
@@ -8,16 +8,13 @@
 }
 
 .item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   width: 400px;
   height: 430px;
   margin: 15px 0;
 }
 
-.placeholder {
-  background-color: #e3e3e3;
+.image-container {
+  background-color: transparent;
   background-image: url("../img/placeholder.jpg");
   background-size: 20%;
   background-repeat: no-repeat;
@@ -30,6 +27,24 @@
   margin-bottom: 10px;
 }
 
+.item a {
+  color: #515151;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.item:hover img {
+  -webkit-transform: scale(0.96);
+  transform: scale(0.96);
+}
+
+.item:hover span {
+  font-weight: 500;
+  color: #F58E23;
+}
+
 .item img {
   object-fit: cover;
   border-radius: 3%;
@@ -37,6 +52,7 @@
   outline: 0;
   width: 100%;
   height: 100%;
+  transition: 0.3s ease;
 }
 
 .item span {
@@ -50,7 +66,7 @@
     height: 375px;
   }
 
-  .placeholder {
+  .image-container {
     width: 350px;
     height: 350px;
   }
@@ -62,7 +78,7 @@
     height: 320px;
   }
 
-  .placeholder {
+  .image-container {
     width: 300px;
     height: 300px;
   }
@@ -79,7 +95,7 @@
     height: 420px;
   }
 
-  .placeholder {
+  .image-container {
     width: 400px;
     height: 400px;
   }
@@ -91,7 +107,7 @@
     height: 375px;
   }
 
-  .placeholder {
+  .image-container {
     width: 350px;
     height: 350px;
   }
@@ -107,7 +123,7 @@
     height: 320px;
   }
 
-  .placeholder {
+  .image-container {
     width: 300px;
     height: 300px;
   }
@@ -125,7 +141,7 @@
     height: 420px;
   }
 
-  .placeholder {
+  .image-container {
     width: 400px;
     height: 400px;
   }
@@ -143,7 +159,7 @@
     height: 320px;
   }
 
-  .placeholder {
+  .image-container {
     width: 300px;
     height: 300px;
   }
@@ -155,7 +171,7 @@
     height: 260px;
   }
 
-  .placeholder {
+  .image-container {
     width: 250px;
     height: 250px;
   }
