--- a/css/contact.css
+++ b/css/contact.css
@@ -6,6 +6,9 @@
 
 #info-section {
   width: 50%;
+  padding-right: 30px;
+  box-sizing: border-box;
+  font-weight: 500;
 }
 
 #info-section div:first-of-type {
@@ -14,6 +17,14 @@
 
 #info-section > div {
   margin: 45px 0;
+}
+
+#contact-intro > h2 {
+  margin-bottom: 10px;
+}
+
+#contact-social {
+  margin-bottom: 0 !important;
 }
 
 #contact-banner {
@@ -26,9 +37,86 @@
   height: 140px;
 }
 
-#form-section {
-  width: 50%;
+#contact-social > h2 {
+  margin-bottom: 20px;
 }
 
+.social-account:first-of-type,
+.social-account:nth-of-type(2) {
+  margin-bottom: 20px;
+}
+
+.social-account > a {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  text-decoration: none;
+  max-width: 230px;
+  color: #515151;
+}
+
+.social-account > a:hover > span {
+  color: #F58E23;
+}
+
+.social-account > a > h3 {
+  margin: 0 10px 0 0;
+}
+
+.social-icon {
+  width: 32px;
+  margin-right: 15px;
+}
+
+#form-section {
+  width: 50%;
+  min-height: 540px;
+  padding: 30px;
+  background-color: #e9e9e9;
+  border-radius: 5%;
+  box-sizing: border-box;
+}
+
+#contact-form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-form > * {
+  margin: 10px 0;
+  height: 50px;
+  padding: 10px 20px;
+  border-radius: 12px;
+  border: none;
+  box-sizing: border-box;
+}
+
+::placeholder {
+  color: #b6b6b6;
+  opacity: 1; /* Firefox */
+}
+
+#input-message {
+  height: 200px;
+  max-width: 100%;
+}
+
+#submit-button {
+  width: 100px;
+  background-color: #F58E23;
+  border-radius: 20px;
+  height: 40px;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.1rem;
+  line-height: 1.4rem;
+  margin-bottom: 0; 
+}
+
+#submit-button:hover {
+  cursor: pointer;
+}
 
 
