--- a/css/contact.css
+++ b/css/contact.css
@@ -29,12 +29,15 @@
 
 #contact-banner {
   width: 100%;
-  height: 140px;
+  height: 210px;
+  text-align: center;
+  background-color: #ffa860;
+  border-radius: 20px;
 }
 
 #contact-banner > img {
-  width: 100%;
-  height: 140px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 #contact-social > h2 {
@@ -98,7 +101,7 @@
 }
 
 #input-message {
-  height: 200px;
+  height: 256px;
   max-width: 100%;
 }
 
