--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,8 @@
 #content {
-  margin-top: 100px;
+  margin-top: 75px;
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 #info-section {
@@ -19,6 +20,21 @@
   margin: 45px 0;
 }
 
+#contact-banner {
+  width: 100%;
+  height: 180px;
+  text-align: center;
+  border-bottom: 6px solid #3a3e4f;
+}
+
+#contact-banner > img {
+  max-width: 100%;
+  max-height: 100%;
+  min-width: 310px;
+  position: relative;
+  top: 10px;
+}
+
 #contact-intro > h2 {
   margin-bottom: 10px;
 }
@@ -27,26 +43,19 @@
   margin-bottom: 0 !important;
 }
 
-#contact-banner {
-  width: 100%;
-  height: 210px;
-  text-align: center;
-  background-color: #ffa860;
-  border-radius: 20px;
-}
-
-#contact-banner > img {
-  max-width: 100%;
-  max-height: 100%;
-}
-
 #contact-social > h2 {
   margin-bottom: 20px;
 }
 
-.social-account:first-of-type,
-.social-account:nth-of-type(2) {
-  margin-bottom: 20px;
+#contact-social > div {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.social-account {
+  margin: 0 20px 20px 0;
 }
 
 .social-account > a {
@@ -54,27 +63,30 @@
   flex-direction: row;
   align-content: center;
   text-decoration: none;
-  max-width: 230px;
+  max-width: 245px;
   color: #515151;
 }
 
-.social-account > a:hover > span {
+.social-account > a:hover > h3 {
   color: #F58E23;
 }
 
 .social-account > a > h3 {
-  margin: 0 10px 0 0;
+  margin: 0;
 }
 
 .social-icon {
   width: 32px;
-  margin-right: 15px;
+  margin-right: 10px;
+}
+
+.social-icon.tumblr-icon {
+  margin-right: 5px;
 }
 
 #form-section {
   width: 50%;
-  min-height: 540px;
-  padding: 30px;
+  padding: 25px 30px;
   background-color: #e9e9e9;
   border-radius: 5%;
   box-sizing: border-box;
@@ -101,7 +113,7 @@
 }
 
 #input-message {
-  height: 256px;
+  height: 160px;
   max-width: 100%;
 }
 
@@ -122,4 +134,49 @@
   cursor: pointer;
 }
 
+@media (max-width: 800px) {
+  #content {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+  }
 
+  #info-section {
+    width: 100%;
+    padding-right: 0;
+  }
+
+  #form-section {
+    width: 100%;
+  }
+
+  #contact-social {
+    margin-bottom: 15px !important;
+  }
+
+  #submit-button {
+    margin: 10px auto 0 auto;
+  }
+}
+
+@media (max-width: 500px) {
+  #content {
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 450px) {
+  #form-section {
+    padding: 10px 15px;
+  }
+
+  #contact-form > * {
+    margin: 5px 0;
+    padding: 5px 15px;
+  }
+
+  #submit-button {
+    margin: 5px auto 0 auto;
+    height: 30px;
+  }
+}
