--- a/css/contact.css
+++ b/css/contact.css
@@ -115,6 +115,7 @@
 #input-message {
   height: 160px;
   max-width: 100%;
+  padding-top: 15px;
 }
 
 #submit-button {
@@ -175,8 +176,12 @@
     padding: 5px 15px;
   }
 
+  #input-message {
+    padding-top: 14px;
+  }
+
   #submit-button {
     margin: 5px auto 0 auto;
-    height: 30px;
+    height: 34px;
   }
 }
