--- a/css/main.css
+++ b/css/main.css
@@ -85,11 +85,11 @@ body {
   font-size: 2rem;
   position: absolute;
   top: 0;
-  right: 0;
   width: 100%;
   height: 100%;
   background-color: white;
   overflow: hidden;
+  min-width: 300px;
 }
 
 #menu-hamburger:not(.menu-closed) {
