add loading icon

--- a/css/index.css
+++ b/css/index.css
@@ -14,17 +14,37 @@
 }
 
 .image-container {
-  background-color: transparent;
-  background-image: url("../img/placeholder.jpg");
-  background-size: 20%;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
   border-radius: 3%;
   border: 0;
   outline: 0;
   width: 400px;
   height: 400px;
   margin-bottom: 10px;
+}
+
+@keyframes spin {
+	from{transform:rotate(0deg)}
+	to{transform:rotate(360deg)}
+}
+
+@-webkit-keyframes spin {
+	from{transform:rotate(0deg)}
+	to{transform:rotate(360deg)}
+}
+
+.loading-icon:before {
+  content: "";
+  position: absolute;
+  height: inherit;
+  width: inherit;
+  z-index: -1;
+  background-color: transparent;
+  background-image: url(../img/placeholder.png);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 10%;
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
 }
 
 .item a {
