--- a/css/main.css
+++ b/css/main.css
@@ -83,17 +83,14 @@ body {
 #menu.mobile-menu {
   z-index: 2;
   font-size: 2rem;
-  position: absolute;
-  top: 0;
   width: 100%;
   height: 100%;
   background-color: white;
   overflow: hidden;
-  min-width: 300px;
 }
 
 #menu-hamburger:not(.menu-closed) {
- margin: 20px 20px;
+  margin: 0 0 20px 20px;
 }
 
 #menu.mobile-menu #menu-links {
@@ -153,5 +150,12 @@ body {
 @media (max-width: 500px) {
   #logo h2 {
     display: none;
+  }
+}
+
+@media (max-width: 400px) {
+  #menu.mobile-menu #menu-links {
+    font-size: 2rem;
+    line-height: 4rem;
   }
 }
