--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,23 @@ body {
   background-size: 40px;
 }
 
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+  height: auto;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}           
+
 @media (max-width: 1200px) {
   body {
     font-size: 15px;
