--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: "Fira Sans", sans-serif;
   font-weight: 400;
   color: #515151;
   font-size: 16px;
@@ -76,7 +76,7 @@ body {
 
 .active-link {
   font-weight: 500;
-  color: #F58E23;
+  color: #f58e23;
   text-decoration: none;
 }
 
@@ -123,13 +123,15 @@ body {
   height: auto;
 }
 
-.embed-container iframe, .embed-container object, .embed-container embed {
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-}           
+}
 
 @media (max-width: 1200px) {
   body {
