--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 400;
   color: #515151;
   font-size: 16px;
